<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="AudioTypes">
        <item>3GP</item>
        <item>MPEG-4</item>
        <item>AMR_NB</item>
    </string-array>

    <string name="app_name">Vita Sound Diary</string>
    <string name="title_section3">Entry Recorder</string>
    <string name="title_section2">My Diary</string>
    <string name="title_section1">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="User_Name">Paul De Fault</string>
    <string name="user_pic">Profile_Pic</string>
    <string name="file_name">Defaul Name</string>
    <string name="second_line">Description</string>
    <string name="file_icon">File Icon</string>
    <string name="save_button">Save Recording</string>
    <string name="mic_rec">Mic Pic</string>
    <string name="a_item_name">Delete</string>
    <string name="b_item_name">Rename</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello World</string>
    <string name="main_no_items">No posts to display</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome to Vita Sound Diary</string>
    <string name="splashdescription">the background logo</string>
    <string name="button_sign_out">Sign out</string>
    <string name="c_item_name">Share</string>
    <string name="logo">OurLogo</string>

    <string name="edit_message">Enter a message</string>
    <string name="button_send">Play</string>
    <string name="button_send2">Stop</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="button_record">Record</string>
    <string name="button_stoprecord">Stop Recording</string>
    <string name="img_play">play button</string>
    <string name="img_stop">stop</string>
    <string name="img_record">record</string>
    <string name="img_microphone">microphone</string>
    <string name="img_recordinglight">red recording light</string>
    <color name="black">#000000</color>
    <color name="blueish">#33CCFF</color>
    <color name="blueish2">#3300F0</color>
    <color name="cream">#FDF5C9</color>
    <color name="transperent">#00FFFFFF</color>
    <color name="white">#FFFFFF</color>
    <string name="timerVal">00:00</string>
    <string name="Capture">Capture</string>
    <string name="postButton">Post</string>
    <string name="add">Add Button</string>
    <string name="playButton">Play Button</string>

</resources>
